--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -139,6 +139,7 @@
     <file>images/critical.png</file>
     <file>images/question.png</file>
     <file>images/set_boot_splash.png</file>
+    <file>images/brightness.png</file>
 
     <file>images/battery_0.png</file>
     <file>images/battery_1.png</file>
