clean volume dialog.  https://trakrapp.com/trakr/a#projects/boox/issues/880.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -237,5 +237,6 @@
     <file>images/lock_page_turning.png</file>
     <file>images/comic_mode.png</file>
 
+    <file>images/system_volume.png</file>
   </qresource>
 </RCC>
