1. add volume control icon; 2. update icons in tts widget. https://trakrapp.com/trakr/a#projects/boox/issues/974

--- a/code/src/tts/tts_images.qrc
+++ b/code/src/tts/tts_images.qrc
@@ -4,5 +4,6 @@
     <file>images/tts_close.png</file>
     <file>images/tts_play.png</file>
     <file>images/tts_stop.png</file>
+    <file>images/tts_volume.png</file>
   </qresource>
 </RCC>
