added missing files.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -59,6 +59,7 @@
     <file>images/zoom_to_height.png</file>
     <file>images/zoom_to_page.png</file>
     <file>images/zoom_to_width.png</file>
+    <file>images/zoom_by_two_points.png</file>
     <file>images/zoom_10%.png</file>
     <file>images/zoom_20%.png</file>
     <file>images/zoom_30%.png</file>
