fix bug in display tts menu icon in dictionary

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -117,6 +117,7 @@
     <file>images/tts_normal.png</file>
     <file>images/tts_plain.png</file>
     <file>images/tts_vivid.png</file>
+    <file>images/tts_icon.png</file>
 
     <file>images/delete_account.png</file>
     <file>images/display_account.png</file>
