1. improve look and feel of tree view dialog; 2. add history item at browser navigation actions. https://trakrapp.com/trakr/a#projects/boox/issues/1101

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -244,5 +244,6 @@
     <file>images/reading_options.png</file>
 
     <file>images/system_volume.png</file>
+    <file>images/history.png</file>
   </qresource>
 </RCC>
