add ui support of browser mobile mode. https://trakrapp.com/trakr/a#projects/boox/issues/1148

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -245,5 +245,6 @@
 
     <file>images/system_volume.png</file>
     <file>images/history.png</file>
+    <file>images/mobile_mode.png</file>
   </qresource>
 </RCC>
