ui: add SketchMiscItem::SKETCH_MISC_PAGE_MODE, FunctionID::ID_HAND

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -156,6 +156,7 @@
     <file>images/battery_charge_5.png</file>
 
     <file>images/stylus_pan.png</file>
+    <file>images/stylus_hand.png</file>
     <file>images/stylus_sketch.png</file>
     <file>images/stylus_erase_sketch.png</file>
     <file>images/stylus_zoom_in.png</file>
