add icons for sync and share.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -247,5 +247,8 @@
     <file>images/system_volume.png</file>
     <file>images/history.png</file>
     <file>images/mobile_mode.png</file>
+
+    <file>images/share.png</file>
+    <file>images/sync.png</file>
   </qresource>
 </RCC>
