enable caller to add app defined icon.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -248,5 +248,6 @@
     <file>images/history.png</file>
     <file>images/mobile_mode.png</file>
     <file>images/glow_light_switch.png</file>
+    <file>images/app_default.png</file>
   </qresource>
 </RCC>
