--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -249,6 +249,7 @@
     <file>images/mobile_mode.png</file>
     <file>images/glow_light_switch.png</file>
     <file>images/app_close.png</file>
+    <file>images/app_default.png</file>
     <file>images/toolbar_url_input.png</file>
 
   </qresource>
