--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -250,6 +250,8 @@
     <file>images/glow_light_switch.png</file>
     <file>images/app_close.png</file>
     <file>images/app_default.png</file>
+    <file>images/app_increase.png</file>
+    <file>images/app_decrease.png</file>
     <file>images/toolbar_url_input.png</file>
 
   </qresource>
