add close button in menu.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -256,5 +256,8 @@
     <file>images/menu_background_2.png</file>
     <file>images/menu_background_3.png</file>
     <file>images/menu_background_4.png</file>
+
+    <file>images/close_menu.png</file>
+    <file>images/close_menu_pressed.png</file>
   </qresource>
 </RCC>
