--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -250,9 +250,19 @@
     <file>images/glow_light_switch.png</file>
     <file>images/app_close.png</file>
     <file>images/app_default.png</file>
+    <file>images/toolbar_url_input.png</file>
+
+    <file>images/app_status_bar_setting.png</file>
     <file>images/app_increase.png</file>
     <file>images/app_decrease.png</file>
-    <file>images/toolbar_url_input.png</file>
+    <file>images/app_zoom_to_page.png</file>
+    <file>images/app_custom_zoom.png</file>
+    <file>images/app_two_points_zoom.png</file>
+    <file>images/app_column_tool.png</file>
+    <file>images/app_glyph_embolden.png</file>
+    <file>images/app_annotation.png</file>
+
+
 
   </qresource>
 </RCC>
