--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -260,8 +260,9 @@
     <file>images/app_two_points_zoom.png</file>
     <file>images/app_column_tool.png</file>
     <file>images/app_glyph_embolden.png</file>
+    <file>images/app_reflow.png</file>
     <file>images/app_annotation.png</file>
-
+    <file>images/app_screen_rotation.png</file>
 
 
   </qresource>
