--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -262,6 +262,7 @@
     <file>images/app_glyph_embolden.png</file>
     <file>images/app_reflow.png</file>
     <file>images/app_annotation.png</file>
+    <file>images/app_back.png</file>
 
 
   </qresource>
