--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -259,5 +259,10 @@
 
     <file>images/close_menu.png</file>
     <file>images/close_menu_pressed.png</file>
+    <file>images/wifi_0.png</file>
+    <file>images/wifi_1.png</file>
+    <file>images/wifi_2.png</file>
+    <file>images/wifi_3.png</file>
+    <file>images/wifi_4.png</file>
   </qresource>
 </RCC>
