--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -264,6 +264,11 @@
     <file>images/app_annotation.png</file>
     <file>images/app_back.png</file>
 
+    <file>images/wifi_0.png</file>
+    <file>images/wifi_1.png</file>
+    <file>images/wifi_2.png</file>
+    <file>images/wifi_3.png</file>
+    <file>images/wifi_4.png</file>
 
   </qresource>
 </RCC>
