improve status bar

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -264,5 +264,7 @@
     <file>images/wifi_2.png</file>
     <file>images/wifi_3.png</file>
     <file>images/wifi_4.png</file>
+
+    <file>images/progress_position.png</file>
   </qresource>
 </RCC>
