improve popup menu

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -266,5 +266,9 @@
     <file>images/wifi_4.png</file>
 
     <file>images/progress_position.png</file>
+    <file>images/menu_background.png</file>
+    <file>images/menu_icon.png</file>
+    <file>images/option_icon.png</file>
+
   </qresource>
 </RCC>
