improve wifi_dialog

--- a/code/src/wireless/wifi_images.qrc
+++ b/code/src/wireless/wifi_images.qrc
@@ -24,6 +24,25 @@
     <file>images/signal_3g_5.png</file>
     <file>images/signal_3g_off.png</file>
 
+    <file>images/network_connection_icon.png</file>
+
+    <file>images/lock_black.png</file>
+    <file>images/lock_gray.png</file>
+    <file>images/config_black.png</file>
+    <file>images/config_gray.png</file>
+    <file>images/wifi_0_black.png</file>
+    <file>images/wifi_0_gray.png</file>
+    <file>images/wifi_1_black.png</file>
+    <file>images/wifi_1_gray.png</file>
+    <file>images/wifi_2_black.png</file>
+    <file>images/wifi_2_gray.png</file>
+    <file>images/wifi_3_black.png</file>
+    <file>images/wifi_3_gray.png</file>
+    <file>images/wifi_4_black.png</file>
+    <file>images/wifi_4_gray.png</file>
+    <file>images/status_black.png</file>
+    <file>images/status_gray.png</file>
+    <file>images/refresh_black.png</file>
 
   </qresource>
 </RCC>
