improve popup menu in landscape mode.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -267,6 +267,7 @@
 
     <file>images/progress_position.png</file>
     <file>images/menu_background.png</file>
+    <file>images/menu_background_landscape.png</file>
     <file>images/menu_icon.png</file>
     <file>images/option_icon.png</file>
 
