1 in system config database add new interface for save device id and serial nuber 2 add new system action "tutorial cation" 3 fixed viewer menu sortcut menu show normally.

--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -270,6 +270,7 @@
     <file>images/menu_background_landscape.png</file>
     <file>images/menu_icon.png</file>
     <file>images/option_icon.png</file>
+    <file>images/user_guide.png</file>
 
   </qresource>
 </RCC>
