--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -264,6 +264,7 @@
     <file>images/app_reflow.png</file>
     <file>images/app_annotation.png</file>
     <file>images/app_back.png</file>
+    <file>images/citation_mode.png</file>
 
 
   </qresource>
