--- a/code/src/ui/onyx_ui_images.qrc
+++ b/code/src/ui/onyx_ui_images.qrc
@@ -270,6 +270,12 @@
 
     <file>images/adjust_position.png</file>
     <file>images/hyphenation.png</file>
+    
+    <file>images/wifi_0.png</file>
+    <file>images/wifi_1.png</file>
+    <file>images/wifi_2.png</file>
+    <file>images/wifi_3.png</file>
+    <file>images/wifi_4.png</file>
 
   </qresource>
 </RCC>
